# StbLibApp

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment_filter_black_white_display.glsl  fragment_filter_cold_display.glsl  fragment_filter_display.glsl  fragment_filter_gray_display.glsl  fragment_filter_mosaic_display.glsl  fragment_filter_negative_display.glsl  fragment_filter_nostalgia_display.glsl  fragment_filter_oval_display.glsl  fragment_filter_picture_lattice_display.glsl  fragment_filter_soul_out_display.glsl  fragment_filter_vortex_display.glsl  fragment_filter_water_mark_display.glsl  fragment_split_screen.glsl  fragment_texture_color_offset_display.glsl  fragment_texture_display_frame.glsl  vertex_split_screen.glsl
app/src/main/cpp/: CMakeLists.txt  EGLDisplayYUV.cpp  FilterDisplay.cpp  FilterDisplay.h  FrameBufferDisplay.cpp  FrameBufferDisplay.h  FrameBufferTexture.cpp  FrameBufferTexture.h  GlobalContexts.h  LogUtils.h  MapBuffersDisplay.cpp  MapBuffersDisplay.h  ShaderUtils.cpp  ShaderUtils.h  ShaderYUV.cpp  ShaderYUV.h  TextureDisplay.cpp  TextureDisplay.h  VertexArrayDisplay.cpp  VertexArrayDisplay.h  VertexBufferDisplay.cpp  VertexBufferDisplay.h  WaterMarkDisplay.cpp  WaterMarkDisplay.h  native-lib.cpp  stb_image.h  stb_image_resize.h  stb_image_write.h
app/src/main/res/layout/: activity_camera_preview.xml  activity_filter.xml  activity_frame_buffer.xml  activity_main.xml  activity_opengl_advanced.xml  activity_texture_display.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
